<resources>
    <string name="app_name">DepreStyle</string>
    <string name="tell_something_about_deprestyle">TELL SOMETHING ABOUT DEPRESTYLE</string>
    <string name="start_test">START TEST</string>
    <string name="welcome_to_deprestyle">Welcome to DepreStyle</string>
    <string name="learn_more">learn_more</string>
    <string name="join_us_now">join_us_now</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="fitness1">TODO</string>
    <string name="settings1">TODO</string>
    <string name="selfcare1">TODO</string>
    <string name="facts1">TODO</string>
    <string name="login">login</string>
    <string name="give_love_to_yourself">Give love to yourself</string>
    <string name="facts">Facts</string>
    <string name="self_care">Self Love</string>
    <string name="did_you_know">Did you know</string>
    <string name="fitness">Healthy Exercise</string>
    <string name="do_some_physical_activities">Improve your mood</string>
    <string name="journal">Journal</string>
    <string name="mema_lang">How are you</string>
    <string name="score">Total score:</string>
    <string name="result">Result</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="retake">Retake</string>
    <string name="home">DepreStyle</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="delete">Delete</string>
    <string name="backk">Back</string>
    <string name="finish">Finish</string>
    <string name="add_new_task">Add New Task</string>
    <string name="example">Example</string>
    <string name="Journal">Journal</string>
    <string name="date">Date</string>
    <string name="add_moment">What are you up to buddy?</string>
    <string name="time">time</string>
    <string name="add">add</string>
    <string name="how_are_you">How are you?</string>
    <string name="set_a_title_for_this_log_required">Entry Title</string>
    <string name="physical_activities">Physical Exercise</string>
    <string name="mental_activities">Mental Exercise</string>
    <string name="Bounce">1. Bounce!</string>
    <string name="PlayOutside">2. Go Play Outside</string>
    <string name="Walk">3. Get Your Walk On</string>
    <string name="Yogi">4. Become a Yogi</string>
    <string name="Run">5. Set Off That Runner\'s High</string>
    <string name="BuildMuscle">6. Build Your Muscles</string>
    <string name="try_some_of_these_exercises">Try some of these exercises</string>
    <string name="or">OR</string>
    <string name="choose_something_and_lets_do_this">Choose something and lets do this!</string>
    <string name="bounceinfo">“You don’t need to jump, but bend your knees and bounce as quickly as you can for a few minutes,” “This is an easy way to oxygenate your brain and get some endorphins flowing.”</string>
    <string name="playinfo">“Just moving your body inside or out is exercise,”. “Choose whatever works for you, depending on your functioning level, energy, and preferences.”</string>
    <string name="walkinfo">“Practical wisdom suggests that doing something is better than doing nothing in terms of physical activity,” If depression has made you sedentary, start off slowly and gradually increase time and distance.”</string>
    <string name="yogiinfo">“Eastern traditions such as yoga have a wonderful antidepressant effect in that they improve flexibility; involve mindfulness, which breaks up repetitive negative thoughts; increase strength; make you aware of your breathing; improve balance; and contain a meditative component.”</string>
    <string name="runinfo">“The most tangible example of exercise stimulating certain brain chemicals is the runner’s high that many athletes report experiencing once crossing a certain threshold of exertion while running.”</string>
    <string name="buildinfo">“Strength training is about mastery and control,” “It requires full attention and concentration. More importantly, people can see the results, the outline of the muscles forming, from dedication and training.”</string>
    <string name="liftupmood">Lift up your mood by doing these activities!</string>
    <string name="factstitle">Enhance your knowledge about depression</string>
    <string name="didyouknow">Did you know?</string>
    <string name="what_is_depression">What is depression?</string>
    <string name="what_are_its_symptoms">What are its symptoms?</string>
    <string name="what_are_the_risk_factors">What are the Risk factors?</string>
    <string name="how_to_prevent_it">How to prevent it?</string>
    <string name="what_are_its_complications">What are its complications?</string>
    <string name="depreinfo1">Depression is a mood disorder that causes a persistent feeling of sadness and loss of interest. Also called major depressive disorder or clinical depression, it affects how you feel, think and behave and can lead to a variety of emotional and physical problems. You may have trouble doing normal day-to-day activities, and sometimes you may feel as if life isn\'t worth living.</string>
    <string name="depreinfo2">More than just a bout of the blues, depression isn\'t a weakness and you can\'t simply snap out of it. Depression may require long-term treatment. But don\'t get discouraged. Most people with depression feel better with medication and psychotherapy</string>
    <string name="depression">Depression</string>
    <string name="symptoms">Symptoms</string>
    <string name="symptominfo1">Although depression may occur only once during your life, people typically have multiple episodes. During these episodes, symptoms occur most of the day, nearly every day and may include:</string>
    <string name="symptom2">• Feelings of sadness, tearfulness, emptiness or hopelessness</string>
    <string name="symptom3">• Angry outbursts, irritability or frustration, even over small matters</string>
    <string name="symptom4">• Loss of interest or pleasure in most or all normal activities, such as sex, hobbies or sports</string>
    <string name="symptom5">• Sleep disturbances, including insomnia or sleeping too much</string>
    <string name="symptom6">• Tiredness and lack of energy, so even small tasks take extra effort</string>
    <string name="symptom7">• Reduced appetite and weight loss or increased cravings for food and weight gain</string>
    <string name="symptom8">• Frequent or recurrent thoughts of death, suicidal thoughts, suicide attempts or suicide</string>
    <string name="symptom9">• Anxiety, agitation or restlessness</string>
    <string name="symptom10">• Unexplained physical problems, such as back pain or headaches</string>
    <string name="symptom11">• Slowed thinking, speaking or body movements</string>
    <string name="symptom12">• Feelings of worthlessness or guilt, fixating on past failures or self-blame</string>
    <string name="symptom13">• Trouble thinking, concentrating, making decisions and remembering things</string>
    <string name="symptom14">For many people with depression, symptoms usually are severe enough to cause noticeable problems in day-to-day activities, such as work, school, social activities or relationships with others. Some people may feel generally miserable or unhappy without really knowing why.</string>
    <string name="riskinfo1">Depression often begins in the teens, 20s or 30s, but it can happen at any age. More women than men are diagnosed with depression, but this may be due in part because women are more likely to seek treatment. Factors that seem to increase the risk of developing or triggering depression include:</string>
    <string name="risk_factors">Risk factors</string>
    <string name="riskinfo2">• Certain personality traits, such as low self-esteem and being too dependent, self-critical or pessimistic</string>
    <string name="riskinfo3">• Traumatic or stressful events, such as physical or sexual abuse, the death or loss of a loved one, a difficult relationship, or financial problems</string>
    <string name="riskinfo4">• Blood relatives with a history of depression, bipolar disorder, alcoholism or suicide</string>
    <string name="riskinfo5">• Being lesbian, gay, bisexual or transgender, or having variations in the development of genital organs that aren\'t clearly male or female (intersex) in an unsupportive situation</string>
    <string name="riskinfo6">• History of other mental health disorders, such as anxiety disorder, eating disorders or post-traumatic stress disorder</string>
    <string name="riskinfo7">• Abuse of alcohol or recreational drugs</string>
    <string name="riskinfo8">• Serious or chronic illness, including cancer, stroke, chronic pain or heart disease</string>
    <string name="riskinfo9">• Certain medications, such as some high blood pressure medications or sleeping pills (talk to your doctor before stopping any medication)</string>
    <string name="complications">Complications</string>
    <string name="complicationinfo1">Depression is a serious disorder that can take a terrible toll on you and your family. Depression often gets worse if it isn\'t treated, resulting in emotional, behavioral and health problems that affect every area of your life.</string>
    <string name="complicationinfo2">Examples of complications associated with depression include:</string>
    <string name="complicationinfo3">• Excess weight or obesity, which can lead to heart disease and diabetes</string>
    <string name="complicationinfo4">• Pain or physical illness</string>
    <string name="complicationinfo5">• Alcohol or drug misuse</string>
    <string name="complication6">• Anxiety, panic disorder or social phobia</string>
    <string name="complicationinfo6">• Social isolation</string>
    <string name="complicationinfo7">• Suicidal feelings, suicide attempts or suicide</string>
    <string name="complicationinfo8">• Self-mutilation, such as cutting</string>
    <string name="complicationinfo9">• Anxiety, panic disorder or social phobia</string>
    <string name="complicationinfo10">• Family conflicts, relationship difficulties, and work or school problems</string>
    <string name="complicationinfo11">• Premature death from medical conditions</string>
    <string name="prevention">Prevention</string>
    <string name="preventinfo1">There\'s no sure way to prevent depression. However, these strategies may help.</string>
    <string name="preventinfo2">• <b>Take steps to control stress,</b> to increase your resilience and boost your self-esteem.</string>
    <string name="preventinfo3">• <b>Reach out to family and friends,</b> especially in times of crisis, to help you weather rough spells.</string>
    <string name="preventinfo4">• <b>Get treatment at the earliest sign of a problem</b> to help prevent depression from worsening.</string>
    <string name="history">History</string>
    <string name="about">About</string>
    <string name="contact_us">Contact us</string>
    <string name="log_out">Log out</string>
    <string name="email">Email</string>
    <string name="websites">Websites</string>
    <string name="account_settings">Account Settings</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="resetPassInfo">Please enter your email for us to be able to reset your password.</string>
    <string name="reset_password">Reset Password</string>
    <string name="back">BACK</string>
    <string name="hotlines">Hotlines</string>
    <string name="videos">Videos</string>
</resources>