<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroundcolor"
    tools:context="com.example.bj_pogi.deprestylefinalfinal.ForgotPasswordActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textColor="@color/black"
            android:layout_gravity="center"
            android:textSize="22sp"
            android:padding="20dp"
            android:layout_marginTop="20dp"/>

    <TextView
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/resetPassInfo"
        android:textColor="#000000"
        android:layout_margin="5dp"
        android:textSize="16sp"
        android:padding="20dp"/>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextAppearance.AppCompat">

            <EditText
                android:id="@+id/etResetEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:hint="@string/email"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp"
                android:fontFamily="sans-serif-medium"
                android:padding="20dp"/>
        </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnResetPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/peach"
        android:elevation="6dp"
        android:layout_gravity="center"
        android:textColor="@color/black"
       android:layout_marginTop="10dp"
        android:text="@string/reset_password" />

        <TextView
            android:id="@+id/tvBack"
            android:layout_gravity="center"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:padding="20dp"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:drawableStart="@drawable/ic_back"
            android:drawablePadding="7dp"/>

    </LinearLayout>
</LinearLayout>